fixed hero text alignment

--- a/src/css/Hero.scss
+++ b/src/css/Hero.scss
@@ -46,6 +46,7 @@
     .hero-small {
         font-size: 0.875rem;
         color: globals.$black-200;
+        text-align: center;
     }
     h1 {
         font-weight: 600;
